--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+modelscope==1.9.5
+transformers==4.35.2
+streamlit==1.24.0
+sentencepiece==0.1.99
+accelerate==0.24.1
 langchain==0.0.292
 transformers==4.35.2
 gradio==4.4.0
